2009-10-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpNRefactoryASTProvider.cs:
	  Fix 'Bug 545270 - Move type to another file - part 1'.

2009-10-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	  Fixed 'Bug 547949 - Rename partial classes does not rename
	  both classes'.

2009-10-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp/CustomCSharpCodeGenerator.cs: Fixed
	  private implementation type output again.

2009-10-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Filter out special names from override completion.

2009-10-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CustomCSharpCodeGenerator.cs: Tidy and
	  fix compilation.

2009-10-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CustomCSharpCodeGenerator.cs: Restore
	  support for snippet and entry point members.

2009-10-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CustomCSharpCodeGenerator.cs: Commit the
	  first type newline removal hack, tidied up.

2009-10-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CSharpEnhancedCodeProvider.cs: Re-enable
	  the custom generator.

	* MonoDevelop.CSharp/CustomCSharpCodeGenerator.cs: Add
	  comments to header about minimising changes so we can sync
	  from original.

2009-10-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CSharpEnhancedCodeProvider.cs: Disable
	  the custom generator for now, as it's broken.

	* MonoDevelop.CSharp/CustomCSharpCodeGenerator.cs: Revert to a
	  clean import (except the MonoTODO -> //TODO) so that it's
	  easier to see what changes we've made to the original.

2009-10-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	  Fixed 'Bug 547611 - renaming a variable does not rename in
	  this() invocation'.
